--- a/LED/LED.csproj
+++ b/LED/LED.csproj
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>LED.App</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -59,13 +62,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Pages\Accueil.xaml.cs">
-      <DependentUpon>Accueil.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\NewTest.xaml.cs">
-      <DependentUpon>NewTest.xaml</DependentUpon>
-    </Compile>
-    <Page Include="MainWindow.xaml">
+    <Page Include="Windows\CreateNewTest.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -73,33 +74,23 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Windows\CreateNewTest.xaml.cs">
+      <DependentUpon>CreateNewTest.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Pages\Accueil.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\NewTest.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Category.cs" />
-    <Compile Include="Models\Intrus.cs" />
-    <Compile Include="Models\Intrus_Item.cs" />
-    <Compile Include="Models\OrderBy-Item.cs" />
-    <Compile Include="Models\OrderBy.cs" />
-    <Compile Include="Models\Ordered-Item.cs" />
-    <Compile Include="Models\Ordered.cs" />
-    <Compile Include="Models\QCM.cs" />
-    <Compile Include="Models\QCM_Item.cs" />
-    <Compile Include="Models\QuestionGlobalsParameters.cs" />
+    <Compile Include="Models\Item_Intrus.cs" />
+    <Compile Include="Models\Item_OrderBy.cs" />
+    <Compile Include="Models\Item_Ordered.cs" />
+    <Compile Include="Models\Item_QCM.cs" />
+    <Compile Include="Models\Questions.cs" />
     <Compile Include="Models\Test.cs" />
-    <Compile Include="Models\TrueFalse-Item.cs" />
-    <Compile Include="Models\TrueFalse.cs" />
+    <Compile Include="Models\Item_TrueFalse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
