--- a/LED/LED.csproj
+++ b/LED/LED.csproj
@@ -61,6 +61,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\ViewCountDown.cs" />
     <Compile Include="Models\ViewExam.cs" />
     <Compile Include="Models\ViewExamIntrus.cs" />
     <Compile Include="Models\ViewExamOrderBy.cs" />
@@ -69,6 +70,9 @@
     <Compile Include="Models\ViewExamTrueFalse.cs" />
     <Compile Include="Randomizer.cs" />
     <Compile Include="UserControls\IUC_Exam.cs" />
+    <Compile Include="UserControls\UC_CountDown.xaml.cs">
+      <DependentUpon>UC_CountDown.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\UC_ExamIntrus.xaml.cs">
       <DependentUpon>UC_ExamIntrus.xaml</DependentUpon>
     </Compile>
@@ -107,6 +111,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\UC_ConfigTrueFalse.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\UC_CountDown.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
